syntax = "proto3";

option csharp_namespace = "PlanetService";

service GrpcPlanet {
  rpc GetAll (GetAllRequest) returns (PlanetResponse);
}

message GetAllRequest {}

message GrpcPlanetModel {
  int32 id = 1;
  string name = 2;
  double mass = 3;
  double radius = 4;
}

message PlanetResponse {
  repeated GrpcPlanetModel planets = 1;
}